[package]
name = "rust-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.13.0", features = ["full"] }
dotenv = "0.15.0"
envconfig = "0.11.0"
futures-util = "0.3.31"
hex-literal = "1.0.0"
json = "0.12.4"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
